src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Close Loop</fullName>
        <description>Tracks the close loop process.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Colorado ER</fullName>
        <description>Colorado Emergency Response</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Shared Services AP</fullName>
        <description>Shared Services Accounts Payable Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Discussion__c</fullName>
        <label>Initial Discussion</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <description>For Web-to-Case form - specifies the type of inquiry that is being submitted.</description>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Vendor__c</fullName>
        <formula>!SS_Is_Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location for use in the ER web form</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_of_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf of Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <description>Captures text for Other in the ER web form</description>
        <label>Other Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Management__c</fullName>
        <label>Project Management</label>
        <picklist>
            <picklistValues>
                <fullName>Schedule/Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications/Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scope Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;&quot;Project__r.pse__Project_Manager__r.Id&quot;, Project__r.pse__Project_Manager__r.FirstName  &amp; &quot;&quot; &amp; Project__r.pse__Project_Manager__r.LastName, &quot;_self&quot;)</formula>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <formula>IF(IsClosed=True, TRUE, FALSE)</formula>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SS_Case_Category__c</fullName>
        <description>Category picklist used for Web-to-Case form</description>
        <label>Case Category</label>
        <picklist>
            <picklistValues>
                <fullName>Backup Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SS_Category__c</fullName>
        <formula>IF( !SS_Is_Uncategorized__c,
MID(
IF( SS_Is_Backup_Request__c,&apos;Backup Request, &apos;, null) &amp; 
IF( SS_Is_Expense_Report__c , &apos;Expense Report, &apos;, null)&amp;
IF( SS_Is_Special_Handling__c , &apos;Special Handling, &apos;, null)&amp;
IF( SS_Is_Invoice_Request__c, &apos;Invoice Request, &apos;, null)
,0, LEN(
IF( SS_Is_Backup_Request__c,&apos;Backup Request, &apos;, null) &amp; 
IF( SS_Is_Expense_Report__c , &apos;Expense Report, &apos;, null)&amp;
IF( SS_Is_Special_Handling__c , &apos;Special Handling, &apos;, null)&amp;
IF( SS_Is_Invoice_Request__c, &apos;Invoice Request, &apos;, null)&amp;
IF( SS_Is_Uncategorized__c , &apos;Uncategorized&apos;, null)
)-2),
IF( SS_Is_Uncategorized__c , &apos;Uncategorized&apos;, null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Contact_Language__c</fullName>
        <formula>TEXT(Contact.SS_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Is_Backup_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a backup request?</description>
        <inlineHelpText>Is this a backup request?  Email keywords: &apos;backup&apos;, &apos;back-up&apos;, &apos;back up&apos;, &apos;invoice copy&apos;, &apos;invoice copies&apos;, &apos;backed up&apos;</inlineHelpText>
        <label>Is Backup Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Is_Employee__c</fullName>
        <formula>NOT(ISBLANK(Contact.User__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Is_Executive__c</fullName>
        <formula>Contact.Shared_Services_Is_Executive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Is_Expense_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an expense report?</description>
        <inlineHelpText>Is this an expense report?  Email keywords: &apos;expense&apos;, &apos;FEMA&apos;, &apos;manual&apos;, &apos;reimbursement&apos;</inlineHelpText>
        <label>Is Expense Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Is_Invoice_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an invoice request?</description>
        <inlineHelpText>Is this an invoice request?  Email keywords: &apos;bill&apos;, &apos;disconnect&apos;, &apos;1099&apos;, &apos;due&apos;, &apos;compliance&apos;, &apos;rush&apos;, &apos;suspen&apos;, &apos;vendor maintenance&apos;, &apos;wire&apos;, &apos;invoice&apos;</inlineHelpText>
        <label>Is Invoice Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Is_Special_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a special handling request?</description>
        <inlineHelpText>Is this a special handling request?   Email keywords:  &apos;Special Handling&apos;, &apos;Check Request&apos;</inlineHelpText>
        <label>Is Special Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Is_Uncategorized__c</fullName>
        <formula>NOT( OR( SS_Is_Backup_Request__c, SS_Is_Expense_Report__c, SS_Is_Invoice_Request__c, SS_Is_Special_Handling__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Uncategorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Resolve_By__c</fullName>
        <description>Time (including Business Hours) that the agent has to resolve the case.</description>
        <label>Resolve By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SS_SLA_Target__c</fullName>
        <description>Shared Services SLA Target Time</description>
        <formula>IF(SS_Is_Executive__c, 24,
  IF( SS_Is_Backup_Request__c, 24,
    IF( SS_Is_Special_Handling__c, 24,
      IF( SS_Is_Expense_Report__c, 48,
        IF( ( Is_Vendor__c ||  On_Behalf_of_Vendor__c ) &amp;&amp; SS_Is_Invoice_Request__c, 48, 
          IF( SS_Is_Invoice_Request__c, 72, null
          )
        )      
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Target (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_Time_Left__c</fullName>
        <description>Shared Services Time Left indicator</description>
        <formula>IF(!ISNULL(SS_SLA_Target__c),
    IF(SS_SLA_Target__c - (ceiling((NOW() -  CreatedDate)*24))
       +
    (((((NOW() -  CreatedDate)*24)-ceiling((NOW() -  CreatedDate)*24))*60)/100) &gt; 0,
        SS_SLA_Target__c - (ceiling((NOW() -  CreatedDate)*24))
           +
        (((((NOW() -  CreatedDate)*24)-ceiling((NOW() -  CreatedDate)*24))*60)/100),null
    )
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Left (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_Vendor_Name__c</fullName>
        <description>For Web-to-Case form: filled out if the case is being submitted on behalf of a vendor</description>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Violation__c</fullName>
        <description>Shared Services, is this a Violation of the SLA?</description>
        <formula>( TEXT(Status) != &apos;Closed&apos; &amp;&amp; ( DATETIMEVALUE(NOW()) &gt; DATETIMEVALUE(SS_Resolve_By__c)) ) ||
( TEXT(Status) = &apos;Closed&apos; &amp;&amp; ( DATETIMEVALUE(ClosedDate) &gt; DATETIMEVALUE(SS_Resolve_By__c)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Resolution_Date__c</fullName>
        <description>Tracks the &quot;Due Date&quot; of the Agreed Solution.</description>
        <label>Solution Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specific_Solution_Plan__c</fullName>
        <description>Track the Agreed Upon solution.</description>
        <label>Specific Solution Plan</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Response_Link__c</fullName>
        <label>Survey Response Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPS Survey Response</label>
        <referenceTo>NPS_Survey_Response__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Topic__c</fullName>
        <label>Technical Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation/Best Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Experts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>SS_AP_All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>SS_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>SS_SLA_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SS-AP All Closed Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>SS_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>SS_SLA_Target__c</columns>
        <columns>SS_Time_Left__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SS-AP All Open Cases</label>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_All_Uncategorized</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>SS_SLA_Target__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>SS_Is_Uncategorized__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SS AP All Uncategorized</label>
        <queue>SS_AP_Cases</queue>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_Canada</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SS_Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>SS_SLA_Target__c</columns>
        <columns>SS_Resolve_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email - AP Canada,Email - iExpense Canada</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SS-AP Canada</label>
        <language>en_US</language>
        <queue>SS_AP_Cases</queue>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>SS_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>SS_Contact_Language__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>SS_SLA_Target__c</columns>
        <filterScope>Queue</filterScope>
        <label>SS-AP Cases</label>
        <language>en_US</language>
        <queue>SS_AP_Cases</queue>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_Cases_Escalation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>SS_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>SS_SLA_Target__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.ESCALATION_STATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SS-AP Cases Escalation</label>
        <language>en_US</language>
        <queue>SS_AP_Cases_Escalation</queue>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_Cases_Violation</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>SS_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>SS_SLA_Target__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SS_Violation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SS-AP Cases Violation</label>
        <language>en_US</language>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_French_Cases</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>SS_Category__c</columns>
        <columns>SS_SLA_Target__c</columns>
        <columns>SS_Resolve_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Paiement</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Facture</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Fournisseur</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>impayé</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>état de compte</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>passée</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>jour</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>rappel</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>numéro</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>crédit</value>
        </filters>
        <label>SS-AP French Cases</label>
        <language>fr</language>
        <queue>SS_AP_Cases</queue>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_US</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SS_Category__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>SS_SLA_Target__c</columns>
        <columns>SS_Resolve_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email - AP US</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SS-AP US</label>
        <language>en_US</language>
        <queue>SS_AP_Cases</queue>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SS_AP_Uncategorized</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>SS_SLA_Target__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>SS_Is_Uncategorized__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SS AP Uncategorized</label>
        <language>en_US</language>
        <queue>SS_AP_Cases</queue>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Close_Loop_Process</fullName>
        <active>true</active>
        <businessProcess>Close Loop</businessProcess>
        <label>Close Loop Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Colorado_ER</fullName>
        <active>true</active>
        <businessProcess>Colorado ER</businessProcess>
        <description>Colorado ER</description>
        <label>Colorado ER</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shared_Services</fullName>
        <active>true</active>
        <businessProcess>Shared Services AP</businessProcess>
        <description>Shared Services Accounts Payable Support</description>
        <label>Shared Services AP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>